<resources>
    <string name="app_name">BrainTrainer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brain_trainer_title">Brain trainer</string>
    <string name="game_rules">Правила игры: Перед вами будет три фигуры. В верхней отображена сумма двух чисел. В одной из нижних слагаемое этого числа. Ваша цель выбрать второе слагаемое так, чтобы их сумма была равна верхнему числу \n \n Пример: в верхней фигуре отображено число 9, в одной из нижних 5. Значит правильным ответом является число 4</string>
    <string name="rules_agree">Понятно</string>
    <string name="hard_level">Сложный</string>
    <string name="normal_level">Нормальный</string>
    <string name="level_easy">Легкий</string>
    <string name="level_test">Тестовый</string>
    <string name="choose_level">Выберите уровень сложности</string>
    <string name="question_symbol">\?</string>
    <string name="answers_progress">Правильных ответов %s из %s</string>
</resources>