<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DAF2FF"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:text="@string/choose_level"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:text="@string/level_test" />

        <Button
            android:id="@+id/button_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/easy_green"
            android:text="@string/level_easy" />

        <Button
            android:id="@+id/button_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/orange_normal"
            android:text="@string/normal_level" />

        <Button
            android:id="@+id/button_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/hard_red"
            android:text="@string/hard_level" />
    </LinearLayout>
</layout>