<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.WelcomeFragment"
    android:background="#DAF2FF">

    <ImageView
        android:id="@+id/brain_logo"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:src="@drawable/ic_brain"
        android:layout_margin="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brain_trainer_title"
        android:layout_margin="16dp"
        android:textSize="28sp"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brain_logo"
        />

    <TextView
        android:id="@+id/game_rules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/game_rules"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_title"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="22dp"
        android:text="@string/rules_agree"
        />

</androidx.constraintlayout.widget.ConstraintLayout>